Updated config examples

--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -57,13 +57,13 @@
                     "id": "example2",
                     "standardized":true,
                     "sample_sizes": [
-                         320
+                         160, 640
                     ]
                 },
                 {
                     "id": "example3",
                     "standardized":false,
-                    "sample_sizes": 3000
+                    "sample_sizes": [2000,3000]
                 },
                 {
                     "id": "example4",
@@ -238,7 +238,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "cores": 1,
                     "verbose": 0
@@ -263,9 +263,7 @@
                         0.01,
                         0.1,
                         1,
-                        10,
-                        50,
-                        100
+                        2
                     ],
                     "prune": true
                 }
@@ -349,7 +347,7 @@
                     "samplePrior": 1,
                     "structurePrior": 1,
                     "penaltyDiscount": [
-                        0,
+                        0.1,
                         0.5,
                         1,
                         1.5
@@ -362,9 +360,7 @@
                     "datatype": "discrete",
                     "samplePrior": [
                         1,
-                        10,
-                        50,
-                        100
+                        2
                     ],
                     "structurePrior": 1,
                     "penaltyDiscount": null
@@ -377,9 +373,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "test": "fisher-z-test",
                     "datatype": "continuous"
@@ -390,9 +384,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "test": "chi-square-test",
                     "datatype": "discrete"
@@ -405,9 +397,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "score": "bdeu-score",
                     "test": "chi-square-test",
@@ -423,7 +413,7 @@
                     "test": "fisher-z-test",
                     "datatype": "continuous",
                     "penaltyDiscount": [
-                        0,
+                        0.1,
                         0.5,
                         1,
                         1.5
@@ -439,9 +429,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "test": "fisher-z-test",
                     "datatype": "continuous"
@@ -452,9 +440,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "test": "chi-square-test",
                     "datatype": "discrete"
@@ -467,10 +453,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45,
-                        0.5
+                        0.2
                     ],
                     "NAdelete": true,
                     "mmax": "Inf",
@@ -490,8 +473,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35
+                        0.2
                     ],
                     "NAdelete": true,
                     "mmax": "Inf",
@@ -524,10 +506,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45,
-                        0.5
+                        0.2
                     ],
                     "NAdelete": true,
                     "mmax": "Inf",
@@ -565,9 +544,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "score": "bge",
                     "test": "zf",
@@ -587,9 +564,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "test": "zf",
                     "B": null,
@@ -619,9 +594,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "test": "mi",
                     "B": null,
@@ -635,9 +608,7 @@
                         0.01,
                         0.05,
                         0.1,
-                        0.2,
-                        0.35,
-                        0.45
+                        0.2
                     ],
                     "test": "zf",
                     "B": null,
@@ -654,7 +625,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "issmu": 1,
                     "issw": null,
@@ -668,10 +639,10 @@
                     "score": "bge",
                     "iss": 1,
                     "issmu": [
-                        1,
-                        10,
-                        50,
-                        100
+                        0.001,
+                        0.01,
+                        0.1,
+                        1
                     ],
                     "issw": null,
                     "l": 5,
@@ -688,7 +659,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        12
                     ],
                     "issmu": 1,
                     "issw": null,
@@ -704,11 +675,10 @@
                     "score": "bge",
                     "iss": 1,
                     "issmu": [
-                        1,
-                        10,
-                        50,
-                        100
-                    ],
+                        0.001,
+                        0.01,
+                        0.1,
+                        1],
                     "issw": null,
                     "l": 5,
                     "k": 1,
@@ -730,7 +700,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "edgepf": 2,
                     "am": null,
@@ -753,7 +723,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "edgepf": 2,
                     "am": null,
@@ -832,7 +802,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "edgepf": 2,
                     "am": null,
@@ -855,7 +825,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "edgepf": 2,
                     "am": null,
@@ -878,7 +848,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "edgepf": 2,
                     "am": null,
@@ -1063,7 +1033,7 @@
                         0.01,
                         0.1,
                         1,
-                        10
+                        2
                     ],
                     "edgepf": 2,
                     "aw": null,
@@ -1165,10 +1135,7 @@
                     "chi": [
                         0.01,
                         0.1,
-                        1,
-                        10,
-                        50,
-                        100
+                        1
                     ],
                     "edgepf": 2,
                     "aw": null,
