--- a/config/config_sample.json
+++ b/config/config_sample.json
@@ -2,45 +2,35 @@
     "benchmark_setup": {
         "data": [
             {
-                "graph_id": "avneigs4",
+                "graph_id": "asia.csv",
                 "parameters_id": "SEM",
-                "data_id": "example2",
+                "data_id": "example1",
                 "seed_range": [
                     1,
-                    50
+                    1
                     ]
                 }
         ],
         "evaluation": {
-            "ROC": [
-                "gfci-sem-bic-fisher-z",
-                "interiamb-zf",
-                "gs-zf",
-                "fci-fisher-z",
-                "fges-sem-bic",
-                "hc-bge",
-                "itsearch_sample-bge",
-                "mmhc-bge-zf",
-                "omcmc_itsample-bge",
-                "pcalg-gaussCItest",
-                "rfci-fisher-z",
-                "tabu-bge"
-        
+            "ROC": [        
+
             ],
+            "adjmat_true_plots":true,
+            "graph_true_plots":true,
             "adjmat_plots": [
-                "fges-sem-bic", "notears"
+                "fges-sem-bic"
             ],
             "graph_plots": [
-                "omcmc_itsample-bde", "pcalg-binCItest"
+                "fges-sem-bic"               
             ],
             "mcmc_traj_plots": [
-                "omcmc_itsample-bde"
+                
             ],
             "mcmc_heatmaps": [
-                "omcmc_itsample-bde"
+                
             ],
             "autocorr_plots": [
-                "omcmc_itsample-bde"
+                
             ]
         }
     },
